Changed an error in the contact page about a duplicate id in form

--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,7 @@
                 <a href="Contact.html">Contact</a>
             </nav>
         </header>
-        <section id="form" class="sectionBackground center">
+        <section class="sectionBackground center">
             <h2>Contact Me</h2>
             <hr>
             <form action="Assigment01.php" method="POST" id="form">
