Changed the buttons style

--- a/Contact.html
+++ b/Contact.html
@@ -41,7 +41,7 @@
                     <label for="message">Message:</label>
                     <textarea id="message" name="message" class="form-control"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary center">Submit</button>
+                <button type="submit" class="btn btn-primar center">Submit</button>
             </form>
         </section>
         <footer  class="backgroundImg">
