--- a/Projects.html
+++ b/Projects.html
@@ -78,8 +78,8 @@
             </div>
             <!-- Add Next and Previous buttons for slideshow -->
             <div class="center">
-                <button id="prev-btn" class="center">Previous</button>
-                <button id="next-btn" class="center">Next</button>
+                <button id="prev-btn" class="btn btn-primar center">Previous</button>
+                <button id="next-btn" class="btn btn-primar center">Next</button>
             </div>
 
         </section>
