Changed the resume information in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2>About Me</h2>
             <hr>
             <img class="imgAboutMe imgRoundedAndSquare"  src="img/ProfilePicture.png" alt="Profile Picture">
-            <p>Highly skilled and innovative software developer professional with a <span>proven track record in web design, database administration, and technical support</span></p>
+            <p>Highly skilled and innovative professional with a <span>proven track record</span> in web design, database administration, and technical support. With a critical thinking skill, decision making, conciliation and consensus, teamwork, time management and group leadership.</p>
         </section>
         <section id="Hobbies" class="sectionBackground">
             <h2>Hobbies</h2>
