--- a/Resume.html
+++ b/Resume.html
@@ -37,24 +37,24 @@
             <hr>
             <div class="row">
                 <div class="col">
-                    <ul>
-                        <li><h4>Acrilicol.com, Company owner</h4></li>
-                        <li><h5>Web designer and database administrator </h5></li>
-                        <li><h5>[2019-2023]</h5></li>
-                        <li>Administration of database to analyze data from customers and orders in SQL server</li>
-                        <li>Preparation of orders according to customer requirements.</li>
-                        <li>Maintained inventory in SQL tables according to the information supplied by other departments.</li>
-                        <li>Web design in WordPress according to the requirements of the business</li>
+                    <h4>Acrilicol.com, Company owner</h4>
+                    <h5>Web designer and database administrator </h5>
+                    <h5>[2019-2023]</h5>
+                    <ul class="list-group">
+                        <li class="list-group-item">Administration of database to analyze data from customers and orders in SQL server</li>
+                        <li class="list-group-item">Preparation of orders according to customer requirements.</li>
+                        <li class="list-group-item">Maintained inventory in SQL tables according to the information supplied by other departments.</li>
+                        <li class="list-group-item">Web design in WordPress according to the requirements of the business</li>
                     </ul>
                 </div>
                 <div class="col">
-                    <ul>
-                        <li><h4>Cervantes North High School</h4></li>
-                        <li><h5>Database administrator and Webmaster</h5></li>
-                        <li><h5>[2013-2019]</h5></li>
-                        <li>Creation and development of the website liceocervantes.edu.co</li>
-                        <li>Led the development and implementation of the company's digital marketing strategy, including social media marketing, email marketing, and paid advertising.</li>
-                        <li>Analyzed and reported on the performance of digital marketing campaigns, using data-driven insights to optimize and improve campaign effectiveness.</li>
+                    <h4>Cervantes North High School</h4>
+                    <h5>Database administrator and Webmaster</h5>
+                    <h5>[2013-2019]</h5>
+                    <ul class="list-group">
+                        <li class="list-group-item">Creation and development of the website liceocervantes.edu.co</li>
+                        <li class="list-group-item">Led the development and implementation of the company's digital marketing strategy, including social media marketing, email marketing, and paid advertising.</li>
+                        <li class="list-group-item">Analyzed and reported on the performance of digital marketing campaigns, using data-driven insights to optimize and improve campaign effectiveness.</li>
                     </ul>   
                 </div>
             </div>
@@ -64,17 +64,17 @@
             <hr>
             <div class="row">
                 <div class="col">
-                    <ul>
-                        <li><span>Computer Programming</span></li>
-                        <li>2023-2025</li>
-                        <li>Diploma</li>
-                        <li>Algonquin College</li>
-                    </ul>   
-                    <ul>
-                        <li><span>Computer Technician</span></li>
-                        <li>2009</li>
-                        <li>Diploma</li>
-                        <li>Uniapel</li>
+                    <h4>Computer Programming</h4>
+                    <h5>2023-2025</h5>
+                    <ul class="list-group">
+                        <li class="list-group-item">Diploma</li>
+                        <li class="list-group-item">Algonquin College</li>
+                    </ul>
+                    <h4>Computer Technician</h4>
+                    <h5>2009</h5>  
+                    <ul class="list-group">
+                        <li class="list-group-item">Diploma</li>
+                        <li class="list-group-item">Uniapel</li>
                     </ul>   
                 </div>
             </div>
@@ -84,17 +84,17 @@
             <hr>
             <div class="row">
                 <div class="col-6">
-                    <ul>
-                        <li>SQL</li>
-                        <li>Web Development</li>
-                        <li>Social Media Marketing</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>WordPress</li>
-                        <li>Joomla!</li>
-                        <li>CorelDRAW</li>
-                        <li>Adobe Photoshop</li>
-                        <li>Adobe Illustrator</li>
+                    <ul class="list-group">
+                        <li class="list-group-item">SQL</li>
+                        <li class="list-group-item">Web Development</li>
+                        <li class="list-group-item">Social Media Marketing</li>
+                        <li class="list-group-item">HTML</li>
+                        <li class="list-group-item">CSS</li>
+                        <li class="list-group-item">WordPress</li>
+                        <li class="list-group-item">Joomla!</li>
+                        <li class="list-group-item">CorelDRAW</li>
+                        <li class="list-group-item">Adobe Photoshop</li>
+                        <li class="list-group-item">Adobe Illustrator</li>
                     </ul>   
                 </div>
             </div>
