--- a/Resume.html
+++ b/Resume.html
@@ -28,9 +28,7 @@
         <section id="summary" class="sectionBackground">
             <h2>Summary</h2>
             <hr>
-            <p>
-                Highly skilled and innovative software developer professional with a <span>proven track record in web design, database administration, and technical support</span>
-            </p>
+            <p>Highly skilled and innovative professional with a <span>proven track record</span> in web design, database administration, and technical support. With a critical thinking skill, decision making, conciliation and consensus, teamwork, time management and group leadership.</p>
         </section>
         <section id="Experience" class="sectionBackground">
             <h2>Experience</h2>
