Included Github and LinkedIn links in the navigation bar

--- a/Contact.html
+++ b/Contact.html
@@ -23,6 +23,8 @@
                 <a href="Resume.html">Resume</a>
                 <a href="Projects.html">Projects</a>
                 <a href="Contact.html">Contact</a>
+                <a href="https://www.linkedin.com/in/andresporrasdev/" target="_blank">LinkenIn</a>
+                <a href="https://github.com/andresporrasdev" target="_blank">GitHub</a>
             </nav>
         </header>
         <section class="sectionBackground center">
