Updated the content in the Resume.html file in the experience, education and skills sections.

--- a/Resume.html
+++ b/Resume.html
@@ -37,24 +37,24 @@
             <hr>
             <div class="row">
                 <div class="col">
-                    <h4>Acrilicol.com, Company owner</h4>
-                    <h5>Web designer and database administrator </h5>
-                    <h5>[2019-2023]</h5>
+                    <h4>Web Designer and Database Administrator	</h4>
+                    <h5>Acrilicol.com, Bogota, Colombia</h5>
+                    <h5>May 2019 - Dec 2022</h5>
                     <ul class="list-group">
-                        <li class="list-group-item">Administration of database to analyze data from customers and orders in SQL server</li>
-                        <li class="list-group-item">Preparation of orders according to customer requirements.</li>
-                        <li class="list-group-item">Maintained inventory in SQL tables according to the information supplied by other departments.</li>
-                        <li class="list-group-item">Web design in WordPress according to the requirements of the business</li>
+                        <li class="list-group-item">Analyzed data from customers and orders in SQL server, increasing order efficiency by 50%.</li>
+                        <li class="list-group-item">Prepared of orders according to customer requirements with 100% effectiveness.</li>
+                        <li class="list-group-item">Maintained inventory in SQL tables according to information supplied by other departments.</li>
+                        <li class="list-group-item">•	Built Web site in WordPress according to requirements of business.</li>
                     </ul>
                 </div>
                 <div class="col">
-                    <h4>Cervantes North High School</h4>
-                    <h5>Database administrator and Webmaster</h5>
-                    <h5>[2013-2019]</h5>
+                    <h4>Webmaster and Data Base Administrator</h4>
+                    <h5>Cervantes North High School, Bogota, Colombia</h5>
+                    <h5>Jan 2013 - Dec 2019</h5>
                     <ul class="list-group">
-                        <li class="list-group-item">Creation and development of the website liceocervantes.edu.co</li>
-                        <li class="list-group-item">Led the development and implementation of the company's digital marketing strategy, including social media marketing, email marketing, and paid advertising.</li>
-                        <li class="list-group-item">Analyzed and reported on the performance of digital marketing campaigns, using data-driven insights to optimize and improve campaign effectiveness.</li>
+                        <li class="list-group-item">Designed and development of website liceocervantes.edu.co increasing communication between parents and school for four thousand monthly users.</li>
+                        <li class="list-group-item">Led development and implementation of company's digital marketing strategy, including social media marketing, email marketing, and paid advertising increasing metrics of followers by 300%.</li>
+                        <li class="list-group-item">Analyzed and reported on performance of digital marketing campaigns, using data-driven insights to optimize and improve campaign effectiveness, increasing student admissions by 20% and ensuring full use of available school places.</li>
                     </ul>   
                 </div>
             </div>
@@ -64,17 +64,25 @@
             <hr>
             <div class="row">
                 <div class="col">
-                    <h4>Computer Programming</h4>
-                    <h5>2023-2025</h5>
+                    <h4>Computer Programming Diploma</h4>
+                    <h5>Algonquin College, Ottawa, ON, Canada</h5>
+                    <h5>2023 - 2025</h5>
                     <ul class="list-group">
-                        <li class="list-group-item">Diploma</li>
-                        <li class="list-group-item">Algonquin College</li>
+                        <li class="list-group-item">Programming computer</li>
+                        <li class="list-group-item">Java</li>
+                        <li class="list-group-item">Onject Oriented Programming,</li>
+                        <li class="list-group-item">Web development</li>
+                        <li class="list-group-item">Linux</li>
+                        <li class="list-group-item">Database</li>
                     </ul>
                     <h4>Computer Technician</h4>
-                    <h5>2009</h5>  
+                    <h5>Uniapel College, Bogota, Colombia</h5>
+                    <h5>2008 - 2009</h5>  
                     <ul class="list-group">
-                        <li class="list-group-item">Diploma</li>
-                        <li class="list-group-item">Uniapel</li>
+                        <li class="list-group-item">Software and hardware maintenance</li>
+                        <li class="list-group-item">System operatives</li>
+                        <li class="list-group-item">Network set up</li>
+                        <li class="list-group-item">Data Server</li>
                     </ul>   
                 </div>
             </div>
@@ -85,16 +93,15 @@
             <div class="row">
                 <div class="col-6">
                     <ul class="list-group">
-                        <li class="list-group-item">SQL</li>
-                        <li class="list-group-item">Web Development</li>
-                        <li class="list-group-item">Social Media Marketing</li>
-                        <li class="list-group-item">HTML</li>
-                        <li class="list-group-item">CSS</li>
-                        <li class="list-group-item">WordPress</li>
-                        <li class="list-group-item">Joomla!</li>
-                        <li class="list-group-item">CorelDRAW</li>
-                        <li class="list-group-item">Adobe Photoshop</li>
-                        <li class="list-group-item">Adobe Illustrator</li>
+                        <li class="list-group-item">Web Design and Development (HTML, CSS, JavaScript, WordPress and Joomla!)</li>
+                        <li class="list-group-item">Database Administration (SQL Server)</li>
+                        <li class="list-group-item">Java Language</li>
+                        <li class="list-group-item">Digital Marketing Strategy (Google Ads, Facebook, Instagram and TikTok)</li>
+                        <li class="list-group-item">GitHub</li>
+                        <li class="list-group-item">Object Oriented Programming</li>
+                        <li class="list-group-item">Linux (Web and database server, Firewall, Networking, Command Line Proficiency) </li>
+                        <li class="list-group-item">Adobe Suite (Illustrator, Photoshop, Premier Pro and After Effects)</li>
+                        <li class="list-group-item">Customer Service</li>
                     </ul>   
                 </div>
             </div>
