Changed the LindedIn name to the correct one

--- a/Projects.html
+++ b/Projects.html
@@ -24,7 +24,7 @@
                 <a href="Resume.html">Resume</a>
                 <a href="Projects.html">Projects</a>
                 <a href="Contact.html">Contact</a>
-                <a href="https://www.linkedin.com/in/andresporrasdev/" target="_blank">LinkenIn</a>
+                <a href="https://www.linkedin.com/in/andresporrasdev/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/andresporrasdev" target="_blank">GitHub</a>
             </nav>
         </header>
@@ -78,7 +78,7 @@
             <div>
 
             </div>
-            <!-- Add Next and Previous buttons for slideshow -->
+            <!-- Next and Previous buttons for slideshow -->
             <div class="center">
                 <button id="prev-btn" class="btn btn-primar center">Previous</button>
                 <button id="next-btn" class="btn btn-primar center">Next</button>
